--- a/.env
+++ b/.env
@@ -1,3 +1,5 @@
-config_name=development
+FLASK_CONFIG=development
 FLASK_APP= manage.py
 FLASK_DEBUG = 1
+DATABASE_URL=mysql+pymysql://root:PUBLICman09@localhost/examsys_db
+SQLALCHEMY_DATABASE_URI=mysql+pymysql://root:PUBLICman09@localhost/examsys_db
