set secrete key

--- a/.env
+++ b/.env
@@ -3,3 +3,4 @@ FLASK_APP= manage.py
 FLASK_DEBUG = 1
 DATABASE_URL=mysql+pymysql://root:PUBLICman09@localhost/examsys_db
 SQLALCHEMY_DATABASE_URI=mysql+pymysql://root:PUBLICman09@localhost/examsys_db
+SECRET_KEY=p9Bv3Eid9$i01
